testsuite/tests/typing-modules-bugs/pr6899_second_bad.compilers.reference
File "pr6899_second_bad.ml", line 12, characters 6-9:
12 |   let bar = wrap ()
           ^^^
Error: The type of this expression, _[< `Test ] -> unit,
       contains type variables that cannot be generalized
