testsuite/tests/typing-modules-bugs/pr6899_second_bad.ml
(* TEST
flags = " -w -a "
ocamlc_byte_exit_status = "2"
* setup-ocamlc.byte-build-env
** ocamlc.byte
*** check-ocamlc.byte-output
*)

include struct
  let foo `Test = ()
  let wrap f `Test = f
  let bar = wrap ()
end
